--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
 altgraph==0.15
+cycler==0.10.0
 future==0.16.0
+kiwisolver==1.0.1
 macholib==1.9
+matplotlib==2.2.2
 numpy==1.14.3
+opencv-contrib-python==3.4.0.14
 opencv-python==3.4.0.12
 pefile==2017.11.5
 Pillow==5.1.0
 PyInstaller==3.3.1
+pyparsing==2.2.0
 pypiwin32==223
 PyQt5==5.10.1
 pytesseract==0.2.0
+python-dateutil==2.7.3
+pytz==2018.4
 pywin32==223
+scikit-learn==0.19.1
+scipy==1.1.0
 sip==4.19.8
+six==1.11.0
+sklearn==0.0
